--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moshify | Home Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed nam harum
+      suscipit vel architecto nihil quas repellat possimus magni tempora. Iusto
+      harum, voluptatum nam numquam ducimus tempore explicabo quasi incidunt
+      veniam ratione ex adipisci, tempora dignissimos recusandae rem deserunt
+      reiciendis eveniet obcaecati fugiat consectetur. Ad similique asperiores
+      quibusdam saepe eos!
+    </p>
+  </body>
 </html>
