--- a/index.html
+++ b/index.html
@@ -13,17 +13,5 @@
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-  <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed nam harum
-      suscipit vel architecto nihil quas repellat possimus magni tempora. Iusto
-      harum, voluptatum nam numquam ducimus tempore explicabo quasi incidunt
-      veniam ratione ex adipisci, tempora dignissimos recusandae rem deserunt
-      reiciendis eveniet obcaecati fugiat consectetur. Ad similique asperiores
-      quibusdam saepe eos!
-    </p>
-  </body>
+  <body></body>
 </html>
