--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moshify | Home Page</title>
+    <title>Moshify | Go Online for Just $9</title>
+    <meta name="description" content="Deploy your websit in less than 90 seconds">
+    <meta property="og:title" content="Moshify">
+    <meta property="og:description" content="Compelling description---">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://moshify.com">
+    <meta property="og:url" content="https://moshify.com">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,6 +18,7 @@
     />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <nav class="nav collapsible collapsible--expanded">
@@ -159,7 +166,7 @@
         </p>
       </header>
       <article class="grid grid--cols-2 feature">
-        <div class="feature__content">
+        <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon">
               <use xlink:href="/icons/sprite.svg#easy"></use>
@@ -173,7 +180,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-in-left">
           <source
             type="image/webp"
             srcset="/images/easy.webp 1x, /images/easy@2x.webp 2x"
@@ -186,7 +193,7 @@
         </picture>
       </article>
       <article class="grid grid--cols-2 feature">
-        <div class="feature__content">
+        <div class="feature__content" data-aos="fade-left">
           <span class="icon-container">
             <svg class="icon">
               <use xlink:href="/icons/sprite.svg#computer"></use>
@@ -200,7 +207,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-in-right">
           <source
             type="image/webp"
             srcset="/images/easy.webp 1x, /images/easy@2x.webp 2x"
@@ -213,7 +220,7 @@
         </picture>
       </article>
       <article class="grid grid--cols-2 feature">
-        <div class="feature__content">
+        <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon">
               <use xlink:href="/icons/sprite.svg#wordpress"></use>
@@ -227,7 +234,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-in-left">
           <source
             type="image/webp"
             srcset="/images/easy.webp 1x, /images/easy@2x.webp 2x"
@@ -356,5 +363,9 @@
       </div>
     </footer>
     <script src="/js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
