--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moshify | Go Online for Just $9</title>
-    <meta name="description" content="Deploy your websit in less than 90 seconds">
-    <meta property="og:title" content="Moshify">
-    <meta property="og:description" content="Compelling description---">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://moshify.com">
-    <meta property="og:url" content="https://moshify.com">
+    <meta
+      name="description"
+      content="Deploy your websit in less than 90 seconds"
+    />
+    <meta property="og:title" content="Moshify" />
+    <meta property="og:description" content="Compelling description---" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://moshify.com" />
+    <meta property="og:url" content="https://moshify.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
